--- a/index.html
+++ b/index.html
@@ -26,40 +26,14 @@
 <body>
     <div id="map"></div>
     <script>
-            var map = new mapboxgl.Map({
-                container: 'map', // container id
-                style: {
-                    version: 8,
-                    sources: {
-                        'raster-tiles': {
-                            type: 'raster',
-                            tiles: [
-                                'https://ecn.t0.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=587&mkt=en-gb&n=z',
-                                'https://ecn.t1.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=587&mkt=en-gb&n=z',
-                                'https://ecn.t2.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=587&mkt=en-gb&n=z',
-                                'https://ecn.t3.tiles.virtualearth.net/tiles/a{quadkey}.jpeg?g=587&mkt=en-gb&n=z'
-                            ]
-                        }
-                    },
-                    layers: [
-                        {
-                            id: 'simple-tiles',
-                            type: 'raster',
-                            source: 'raster-tiles',
-                            minzoom: 0,
-                            maxzoom: 22
-                        }
-                    ],
-                    glyphs:
-                        'https://api.mapbox.com/fonts/v1/mapbox/{fontstack}/{range}.pbf?access_token=pk.eyJ1Ijoia3VzaGFuMjAyMCIsImEiOiJjaWw5dG56enEwMGV6dWVsemxwMWw5NnM5In0.BbEUL1-qRFSHt7yHMorwew'
-                },
-                center: [-73.97694, 40.76109],
-                zoom: 16, // starting zoom,
-                hash: true,
-                doubleClickZoom: false
-            });
-        map.addControl(new idlygl.IdlyGlPlugin());
-
+        mapboxgl.accessToken = 'pk.eyJ1Ijoia3VzaGFuMjAyMCIsImEiOiJjaWw5dG56enEwMGV6dWVsemxwMWw5NnM5In0.BbEUL1-qRFSHt7yHMorwew'
+        var map = new mapboxgl.Map({
+            container: 'map', // container id 
+            style: 'mapbox://styles/mapbox/satellite-v9',
+            // stylesheet location
+            center: [-73.97694, 40.76109], zoom: 17, // starting zoom, hash: true, doubleClickZoom: false
+        }); 
+        map.addControl(new idlygl.IdlyGlPlugin()); 
     </script>
 </body>
 
