--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             container: 'map', // container id 
             style: 'mapbox://styles/mapbox/satellite-v9',
             // stylesheet location
-            center: [-73.97694, 40.76109], zoom: 17, // starting zoom, hash: true, doubleClickZoom: false
+            center: [-73.97694, 40.76109], 
+            zoom: 17, // starting zoom, hash: true, doubleClickZoom: false
         }); 
         map.addControl(new idlygl.IdlyGlPlugin()); 
     </script>
